traces/bug_661.txt
examples++-load/msh3.cpp:1189: error: DEAD_STORE
  The value written to &idl (type int) is never used.
Showing all 1 steps of the trace


examples++-load/msh3.cpp:1189:4: Write of unused value
1187.   	}
1188.   	else{
1189.   	  idl = 2;
           ^
1190.   	  
1191.   	  ijj[0] = tab_NumSommet[i_ind1]+i_recoll_1pp;
